tests/errors/syntax/unary-not-with-space.fn
---
Description: Unary not with space between operator and operand
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var e = ! true
        return 0
    }
}
